--- a/responsivedatepicker2/index.html
+++ b/responsivedatepicker2/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accordion Example</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
+    rel="stylesheet">
     <!-- search mobile responsive -->
     <link rel="stylesheet" href="./responsivedatepicker2/styles.css">
     <link rel="stylesheet" href="./responsivedatepicker2/monthsecond.css">
