--- a/responsivedatepicker2/index.html
+++ b/responsivedatepicker2/index.html
@@ -29,7 +29,7 @@
                 <span class="accordion-title">
                     <div>
                         <h5 class="accordionfirsttital">Add a location</h5>
-                        <p class="accordionsecondtital">jaipur</p>
+                        <p class="accordionsecondtital">Charleston AFB</p>
                     </div>
                 </span>
                 <span class="accordion-icon"><i class="bi bi-dash"></i></span>
@@ -41,24 +41,20 @@
                         <input type="search" class="searchbox" placeholder="select a destination" />
                     </div>
                     <div class="addlocationncontainerchild">
-                        <div class="addlocationncontainerchild1"><span><svg xmlns="http://www.w3.org/2000/svg"
-                                    width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill"
-                                    viewBox="0 0 16 16">
-                                    <path
-                                        d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6" />
-                                </svg> </span> <span>Jaipur</span></div>
-                        <div class="addlocationncontainerchild1"><span><svg xmlns="http://www.w3.org/2000/svg"
-                                    width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill"
-                                    viewBox="0 0 16 16">
-                                    <path
-                                        d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6" />
-                                </svg> </span> <span>Jaipur</span></div>
-                        <div class="addlocationncontainerchild1"><span><svg
-                                    xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
-                                    <path
-                                        d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6" />
-                                </svg> </span> <span>Jaipur</span></div>
+
+                        <div class="addlocationncontainerchild1">
+                            <div class="location-icon"><img src="../img/Location.svg" alt=""></div>
+                            <p>Charleston AFB</p>
+                        </div>
+                        <div class="addlocationncontainerchild1">
+                            <div class="location-icon"><img src="../img/Location.svg" alt=""></div>
+                            <p>Charleston AFB</p>
+                        </div>
+                        <div class="addlocationncontainerchild1">
+                            <div class="location-icon"><img src="../img/Location.svg" alt=""></div>
+                            <p>Charleston AFB</p>
+                        </div>
+
                     </div>
                 </div>
             </div>
